Name:                gpx-conduit
Version:             0.2
Synopsis:            Read GPX files using conduits
Description:         Read GPX files into simple Point types.
License:             BSD3
License-file:        LICENSE
Author:              Thomas M. DuBuisson
Maintainer:          Thomas.DuBuisson@gmail.com
Copyright:           Thomas M. DuBuisson (2012)
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Exposed-modules:     Geo.GPX.Conduit
  Build-depends:      base
                    , xml-conduit
                    , conduit
                    , conduit-extra
                    , resourcet
                    , attoparsec
                    , time
                    , text
                    , xml-types
                    , old-locale
                    , filepath
                    , monad-control
                    , void

executable conduit
  main-is: Main.hs
  hs-source-dirs:
      app 
  build-depends:      gpx-conduit
                    , base
                    , xml-conduit
                    , conduit
                    , conduit-extra
                    , resourcet
                    , attoparsec
                    , time
                    , text
                    , xml-types
                    , old-locale
                    , filepath
                    , monad-control
                    , void


